--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
         <a href="contact.html">Contact</a>
         
         
-        <a href="admin.html">Contact Admin</a>
+        <a href="Admin.html">Contact Admin</a>
     </nav>
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
