--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starfall CSS Animation with Buttons</title>
+    <title>Raja ji ki </title>
     <link rel="stylesheet" href="style2.css">
     <style>
         .button-container {
