--- a/homepage.html
+++ b/homepage.html
@@ -34,6 +34,11 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="calci.html">calculator</a>
+        <a href="Admin.html">Contact Admin</a>
+
+    </nav>
     <div class="starfall">
         <div class="falling-star"></div>
         <div class="falling-star"></div>
