--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
     </header>
     <nav>
         <a href="index.html">SignUp/login</a>
-       
+       <a href="calci.html">Calculator</a>
         <a href="about.html">Photos</a>
         <a href="contact.html">Contact</a>
         
