--- a/homepage.html
+++ b/homepage.html
@@ -85,12 +85,13 @@
         <button class="btn" onclick="window.open('https://1drv.ms/w/s!AsCFgmSeMLBSccyUD53XzM3b5_w')">Button 2</button>
         <button class="btn" onclick="window.open('https://1drv.ms/w/s!AsCFgmSeMLBSdRBnqAGG4nuUaUw?e=NWACiE')">Button 3</button>
         <button class="btn" onclick="window.open('https://1drv.ms/w/s!AsCFgmSeMLBSd2Qb042Uqn2X1Ls?e=tmIU1o')">Button 4</button>
-        <button class="btn" onclick="window.open('https://example.com/link5', '_blank')">Button 5</button>
-        <button class="btn" onclick="window.open('https://example.com/link6', '_blank')">Button 6</button>
+        <button class="btn" onclick="window.open('https://rajeshpd339.github.io/NumberFunApp/')">Button 5</button>
+       
         <button id="logout" class="btn">Logout</button>
     </div>
     <div class="content">
-        <h2 class="section-title">About buttons</h2>
-        <p> button1 = for rgpv notes all subjects and also have some books     butto2 = physics important topics      button3 civil important topics       button4 computer important topics</p>
+    
+        <h1><strong style="color: rgb(235, 59, 6);">Button one contains books for machine learning, button two contains important links</strong></h1>
+    </div>
 </body>
 </html>
