--- a/homepage.html
+++ b/homepage.html
@@ -91,7 +91,7 @@
     </div>
     <div class="content">
     
-        <h1><strong style="color: rgb(235, 59, 6);">Button one contains books for machine learning, button two contains important links Button 5 for calculator</strong></h1>
+        <h1><strong style="color: rgb(235, 59, 6);">Button </strong></h1>
     </div>
 </body>
 </html>
