--- a/homepage.html
+++ b/homepage.html
@@ -150,7 +150,7 @@
     </header>
     <div class="button-container">
         <button class="btn" onclick="window.open('https://drive.google.com/drive/folders/1-fJFfoj8toSR-hG_8arPVpUO46qn3zO8')">Button 1</button>
-        <button class="btn" onclick="window.open('https://1drv.ms/w/s!AsCFgmSeMLBSccyUD53XzM3b5_w')">Button 2</button>
+        <button class="btn" onclick="window.open('https://drive.google.com/drive/folders/1K3RqC9NuaJ7ifFDj6hfVfjhtkGG3gM31')">Button 2</button>
         <button class="btn" onclick="window.open('https://1drv.ms/w/s!AsCFgmSeMLBSdRBnqAGG4nuUaUw?e=NWACiE')">Button 3</button>
         
         <button class="btn" onclick="window.open('https://rajeshpd339.github.io/NumberFunApp/')">Button 4</button>
@@ -170,7 +170,7 @@
 
     <div class="link-card">
         <h2>Link Title 3</h2>
-        <p>This is a description for Link 3. It provides some context or summary of what the link is about.</p>
+        <p>This is a description for Link 3. It provides important books for web development.</p>
         
     </div>
     <div class="link-card">
