--- a/1inde.html
+++ b/1inde.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>The Quizzify Game</h1>
+        <h1>The SOBER boys quiz</h1>
         <a class="btn" href="./game.html">Play</a>
         <a class="btn" href="./highscores.html">High Scores</a>
       </div>
