--- a/home.html
+++ b/home.html
@@ -106,6 +106,19 @@
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="https://th.bing.com/th/id/OIP.yAU9nVYPCmDWxYIJYaDQmQHaE8?rs=1&pid=ImgDetMain" alt="Second slide">
+                     <div class="carousel-item">
+                    <img class="d-block w-100" src="img11.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img12.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img13.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img14.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="https://www.admissionfever.com/Media/clgimg/gallery/2837_img7678838972709076.jpg" alt="Third slide">
