--- a/homepage.html
+++ b/homepage.html
@@ -112,19 +112,19 @@
     <!-- Navigation -->
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="home.html">Notes</a>
+          <a class="nav-link " aria-current="page" href="home.html">Notes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="calci.html">Calculator</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Admission</a>
+            <a class="nav-link " aria-current="page" href="#">Admission</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Collage Festival </a>
+            <a class="nav-link " aria-current="page" href="#">Collage Festival </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+            <a class="nav-link " aria-current="page" href="about.html">About</a>
           </li>
         
         <li class="nav-item">
