--- a/homepage.html
+++ b/homepage.html
@@ -117,8 +117,8 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="calci.html">Calculator</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Admission</a>
+       <li class="nav-item">
+            <a class="nav-link "  href="admission.html">Admission</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="#">Collage Festival </a>
