--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,31 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+         body {
+            margin: 0;
+            overflow: hidden;
+            background: rgb(232, 224, 224); /* Enhances the gaming theme */
+            font-family: 'Arial', sans-serif;
+            color: white;
+        }
+        .gate {
+            position: fixed;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            z-index: 10;
+            background: linear-gradient(
+                135deg,
+                #1a1a1a,
+                #777676 30%,
+                #ff004d 50%,
+                #292929 70%,
+                #1a1a1a
+            );
+            border: 2px solid #ff004d;
+            box-shadow: 0 0 20px #ff004d, 0 0 50px #ff004d inset;
+            overflow: hidden;
+        }
       
 
         @keyframes fadeIn {
