--- a/homepage.html
+++ b/homepage.html
@@ -33,6 +33,20 @@
             box-shadow: 0 0 20px #ff004d, 0 0 50px #ff004d inset;
             overflow: hidden;
         }
+         @keyframes pulse {
+            0%, 100% {
+                opacity: 0.6;
+            }
+            50% {
+                opacity: 1;
+            }
+        }
+        h1 {
+            text-align: center;
+            margin-top: 50px;
+            font-size: 2.5rem;
+            text-shadow: 0 0 10px #ff004d, 0 0 20px #ff004d;
+        }
       
 
         @keyframes fadeIn {
